# qgis-scheduler

./: .gitignore  INSTALL  Makefile  Makefile.am  README.developer  TODO  common.h  configure.ac  connection_manager.c  connection_manager.h  database.c  database.h  fcgi_data.c  fcgi_data.h  fcgi_state.c  fcgi_state.h  logger.c  logger.h  main.c  process_manager.c  process_manager.h  project_manager.c  project_manager.h  qgis-scheduler.conf  qgis-scheduler.conf.man  qgis-schedulerd.c  qgis-schedulerd.man  qgis_config.c  qgis_config.h  qgis_inotify.c  qgis_inotify.h  qgis_process.c  qgis_process.h  qgis_process_list.c  qgis_process_list.h  qgis_project.c  qgis_project.h  qgis_project_list.c  qgis_project_list.h  qgis_shutdown_queue.c  (+7 more)
init/: README
init/gentoo/: qgis-scheduler.init
init/ubuntu/: qgis-scheduler.init  qgis-schedulerd.init
